syntax = "proto3";

package quiz;

option go_package = "./pkg/gen";

service QuizService {
  rpc Get (GetRequest) returns (Quiz);
  rpc Submit (SubmitRequest) returns (QuizResults);
}

// Get RPC
message GetRequest {
  // quiz parameters - minimal amount of questions? category? etc.
}

message Quiz {
  repeated Question questions = 1;
}

message Question {
  int32 question_id = 1;
  string text = 2;
  repeated string possibilities = 3;
}

// Submit RPC
message SubmitRequest {
  repeated Choice choices = 2;
}

message Choice {
  int32 question_id = 1;
  int32 answer_id = 2;
}

message QuizResults {
  int32 correct_count = 1;
  float score_percentile = 2;
}